--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#041964"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="1dp"
+        android:paddingVertical="20dp">
 
         <Button
             android:id="@+id/button2"
